--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.70"
 deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="v1.112.6"}
 regex = "1.7.3"
+reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.159", features = ["serde_derive"] }
 sled = "0.34.7"
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
