--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ regex = "1.7.3"
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.159", features = ["serde_derive"] }
 sled = "0.34.7"
+tide = "0.16.0"
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
 toml = { version = "0.7.3", features = ["parse"] }
