--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ sled = "0.34.7"
 tide = "0.16.0"
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
 toml = { version = "0.7.3", features = ["parse"] }
+uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }
