--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ edition = "2021"
 anyhow = "1.0.70"
 base64 = "0.21.0"
 deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="v1.112.6"}
+femme = "2.2.1"
 regex = "1.7.3"
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.159", features = ["serde_derive"] }
 sled = "0.34.7"
-tide = "0.16.0"
+tide = { version = "0.16.0", default-features = false, features = ["async-h1", "async-session", "cookies", "h1-server", "sessions"] }
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
 toml = { version = "0.7.3", features = ["parse"] }
 uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }
