--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.70"
 base64 = "0.21.0"
 deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="v1.112.6"}
 femme = "2.2.1"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["getrandom"] }
 regex = "1.7.3"
 reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.159", features = ["serde_derive"] }
