static dir as a config and random secret generation

--- a/example_config.toml
+++ b/example_config.toml
@@ -4,6 +4,7 @@ deltachat_db = "db/dc.sqlite"
 oauth_db = "db/oauth.sled"
 listen_addr = "0.0.0.0:3000"
 enable_request_logging = false
+static_dir = "./static/"
 
 [oauth]
 
