--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,16 @@ base64 = "0.21.0"
 deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="v1.112.6"}
 femme = "2.2.1"
 rand = { version = "0.8.5", features = ["getrandom"] }
-regex = "1.7.3"
-reqwest = { version = "0.11.16", features = ["json"] }
 serde = { version = "1.0.159", features = ["serde_derive"] }
 sled = "0.34.7"
-tide = { version = "0.16.0", default-features = false, features = ["async-h1", "async-session", "cookies", "h1-server", "sessions"] }
-tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "signal"] }
+axum = { version = "0.6", features = ["form", "query", "json", "tower-log", "http1", "headers", "tokio" ] }
+tower-http = { version = "0.4", features = ["fs"] }
+tokio = { version = "1.28", features = ["full"] }
 toml = { version = "0.7.3", features = ["parse"] }
 uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }
+axum-sessions = "0.5.0"
+tower = "0.4.13"
+hyper = { version = "0.14.26", features = ["full"] }
+serde_json = "1.0.96"
+mime = "0.3.17"
+axum-extra = { version = "0.7.4", features = ["form", "query"] }
