--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
-base64 = "0.21.0"
 deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", tag="v1.112.6"}
-femme = "2.2.1"
 rand = { version = "0.8.5", features = ["getrandom"] }
 serde = { version = "1.0.159", features = ["serde_derive"] }
 sled = "0.34.7"
 axum = { version = "0.6", features = ["form", "query", "json", "tower-log", "http1", "headers", "tokio" ] }
-tower-http = { version = "0.4", features = ["fs"] }
+tower-http = { version = "0.4", features = ["fs", "trace"] }
 tokio = { version = "1.28", features = ["full"] }
 toml = { version = "0.7.3", features = ["parse"] }
 uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }
@@ -24,3 +22,7 @@ hyper = { version = "0.14.26", features = ["full"] }
 serde_json = "1.0.96"
 mime = "0.3.17"
 axum-extra = { version = "0.7.4", features = ["form", "query"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+log = "0.4.17"
+
